tests/diagnostics/statements/expression_statements/non_call_expression/expect.txt
# exit: 1
input/main.coppice:2:7: error: expression statements must be calls
      1 + 2
        ^
